Added routes to pgw

--- a/vpn.env.example
+++ b/vpn.env.example
@@ -1,9 +1,9 @@
 # Define your own values for these variables
 # - DO NOT put "" or '' around values, or add space around =
 # - DO NOT use these special characters within values: \ " '
-VPN_IPSEC_PSK=your_ipsec_pre_shared_key
-VPN_USER=your_vpn_username
-VPN_PASSWORD=your_vpn_password
+VPN_IPSEC_PSK=somesecret
+VPN_USER=vpn_user
+VPN_PASSWORD=vpn_password
 
 # (Optional) Define additional VPN users
 # - Uncomment and replace with your own values
@@ -17,14 +17,38 @@ VPN_PASSWORD=your_vpn_password
 # VPN_DNS_SRV1=1.1.1.1
 # VPN_DNS_SRV2=1.0.0.1
 
-# VPN_PUBLIC_IP=192.234.9.20
+VPN_PUBLIC_IP=134.54.34.190
 
-# PGW_NAME=mpesa
-# PGW_LEFT_SUBNETS=10.0.0.0/24
-# PGW_IP=100.22.23.11
-# PGW_RIGHT_SUBNETS=192.168.32.0/24
-# PGW_PSK=Z3G3TecK@p12014!$
+# IPsec Configurations
+PGW_NAME=mpesa
+PGW_LEFT_SUBNETS=10.8.0.0/24
+PGW_IP=134.34.23.34
+PGW_RIGHT_SUBNETS=134.34.16.78/24
+PGW_PSK=sharedsecret9dff3r3
 
-# OVPN_INTEGRATOR_STATIC_IP=10.0.0.2
-# OVPN_SERVER_GATEWAY_IP=10.0.0.1
-# OVPN_INTEGRATOR_NAME=connector
+# Gateway
+# OVPN_SERVER_GATEWAY_IP=10.8.0.1
+OVPN_CONF_IFCONFIG_INET=10.8.0.1
+OVPN_CONF_IFCONFIG_DEST=10.8.0.2
+OVPN_CONF_IFCONFIG_POOL_START=10.8.0.0
+OVPN_CONF_IFCONFIG_POOL_END=10.8.0.254
+OVPN_CONF_ROUTE=10.8.0.0
+OVPN_CONF_PGW_ROUTE=134.34.16.78
+OVPN_CONF_SUBNET=255.255.255.0
+
+# Integrator
+OVPN_INTEGRATOR_STATIC_IP=10.8.0.4
+OVPN_INTEGRATOR_NAME=integrator
+
+#OpenVPN Client
+OVPN_DEVICE=tun
+OVPN_CN=134.54.34.190
+OVPN_PORT=1194
+OVPN_PROTO=udp
+OVPN_DEFROUTE=0
+# OVPN_MTU
+OVPN_TLS_CIPHER=TLS-DHE-RSA-WITH-AES-256-GCM-SHA384:TLS-DHE-RSA-WITH-AES-256-CBC-SHA256:TLS-DHE-RSA-WITH-AES-128-GCM-SHA256:TLS-DHE-RSA-WITH-AES-128-CBC-SHA256
+OVPN_CIPHER=AES-256-CBC
+OVPN_AUTH=SHA512
+# OVPN_OTP_AUTH
+OVPN_COMP_LZO=1
