Fix 1 iptables for routing from OVPN_NET to PGW_NET

--- a/vpn.env.example
+++ b/vpn.env.example
@@ -21,15 +21,17 @@ VPN_PUBLIC_IP=134.54.34.190
 
 # IPsec Configurations
 PGW_NAME=mpesa
-PGW_LEFT_SUBNETS=10.8.0.0/24
 PGW_IP=134.34.23.34
 PGW_RIGHT_SUBNETS=134.34.16.78/24
+PGW_NET=134.34.16.0/24
 PGW_PSK=sharedsecret9dff3r3
+OVPN_NET=10.8.0.0/24
 
 # Gateway
-# OVPN_SERVER_GATEWAY_IP=10.8.0.1
-OVPN_CONF_IFCONFIG_INET=10.8.0.1
-OVPN_CONF_IFCONFIG_DEST=10.8.0.2
+#gateway ip
+OVPN_CONF_IFCONFIG_DEST=10.8.0.1
+#server ip
+OVPN_CONF_IFCONFIG_INET=10.8.0.2
 OVPN_CONF_IFCONFIG_POOL_START=10.8.0.0
 OVPN_CONF_IFCONFIG_POOL_END=10.8.0.254
 OVPN_CONF_ROUTE=10.8.0.0
